--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.8.1
+boto3==1.35.71
+botocore==1.35.71
 dj-database-url==0.5.0
 Django==5.1.3
 django-allauth==65.2.0
+django-storages==1.14.4
 gunicorn==20.1.0
+jmespath==1.0.1
 pillow==11.0.0
 psycopg2==2.9.10
 pytz==2024.2
+s3transfer==0.10.4
 sqlparse==0.5.2
