--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ botocore==1.35.71
 dj-database-url==0.5.0
 Django==5.1.3
 django-allauth==65.2.0
+django-crispy-forms==1.14.0
 django-storages==1.14.4
 gunicorn==20.1.0
 jmespath==1.0.1
